# Goaties

./: .gitignore  Cargo.toml  LICENSE.MD  README.md
goaties-backend/: Cargo.toml  config.toml
goaties-backend/src/: config.rs  main.rs  rest.rs  websocket.rs
goaties-common/: Cargo.toml
goaties-common/src/: lib.rs  models.rs  requests.rs  responses.rs
goaties-ui/: Cargo.toml
goaties-ui/src/: main.rs  models.rs  repository.rs
